done with background editor

--- a/frontend/src/assets/sass/components/_menu.scss
+++ b/frontend/src/assets/sass/components/_menu.scss
@@ -3,9 +3,9 @@
   top: 0;
   right: 0;
   position: fixed;
-  width: 200px;
+  width: 400px;
   height: 100vh;
-  background: rgb(97, 96, 96);
+  background: #f4f5f7;
   box-sizing: border-box;
   padding: 12px 6px 12px 12px;
   transition: ease 0.4s all;
