--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -17,6 +17,7 @@
 @import "components/menu-button.scss";
 @import "components/main-header.scss";
 @import "components/menu.scss";
+@import "components/bg-gallery.scss";
 
 // // Pages
 @import "views/home-page.scss";
