--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -18,6 +18,7 @@
 @import "components/menu-button.scss";
 @import "components/main-header.scss";
 @import "components/menu.scss";
+@import "components/bg-gallery.scss";
 
 // topic
 @import "components/topic/topicList";
