--- a/frontend/src/assets/sass/views/_TrelloPage.scss
+++ b/frontend/src/assets/sass/views/_TrelloPage.scss
@@ -1,5 +1,5 @@
 .trello-page-container {
-  background: url(https://wallpaperplay.com/walls/full/1/b/1/289383.jpg);
+  // background: url(https://wallpaperplay.com/walls/full/1/b/1/289383.jpg);
   width: 100vw;
   height: 100vh;
 }
