--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -27,6 +27,7 @@
 // task
 @import "components/task/taskList";
 @import "components/task/taskPreview";
+@import "components/task/addTask";
 
 // // Pages
 @import "views/home-page.scss";
