--- a/frontend/src/assets/sass/basics/_helpers.scss
+++ b/frontend/src/assets/sass/basics/_helpers.scss
@@ -25,12 +25,15 @@
     &.align-center {
         align-items: center;
     }
+    &.align-start {
+        align-items: flex-start;
+    }
     &.row{
         flex-direction: row;
     }
     &.justify-between {
         justify-content: space-between;
-    }
+    }    
 }
 
 // Media helpers
