--- a/frontend/src/assets/sass/basics/_icons.scss
+++ b/frontend/src/assets/sass/basics/_icons.scss
@@ -10,3 +10,7 @@
     font-family: iconmoon;
     content: "\e9ac";
   }
+  .icon-cross:before {
+    font-family: iconmoon;
+    content: "\ea0f";
+  }
