--- a/frontend/src/assets/fonts/icomoon/style.css
+++ b/frontend/src/assets/fonts/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?hygafi');
-  src:  url('fonts/icomoon.eot?hygafi#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?hygafi') format('truetype'),
-    url('fonts/icomoon.woff?hygafi') format('woff'),
-    url('fonts/icomoon.svg?hygafi#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?2e8ci7');
+  src:  url('fonts/icomoon.eot?2e8ci7#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?2e8ci7') format('truetype'),
+    url('fonts/icomoon.woff?2e8ci7') format('woff'),
+    url('fonts/icomoon.svg?2e8ci7#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,12 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-paint-format:before {
-  content: "\e90c";
-}
-.icon-bin:before {
-  content: "\e9ac";
-}
 .icon-plus:before {
   content: "\ea0a";
+}
+.icon-cross:before {
+  content: "\ea0f";
 }
