--- a/frontend/src/assets/sass/components/_menu.scss
+++ b/frontend/src/assets/sass/components/_menu.scss
@@ -1,4 +1,5 @@
 .menu {
+  z-index: 999;
   margin-top: 70px;
   top: 0;
   right: 0;
@@ -30,6 +31,7 @@
 }
 
 .menu-options img {
+  border-radius: 10px;
   transition: 0.2 ease all;
   cursor: pointer;
   padding: 2px;
@@ -51,9 +53,14 @@
 }
 
 .goback-menu {
+  position: absolute;
+  margin-top: -60px;
   cursor: pointer;
 }
 
 .menu-button {
-  margin-top: -109px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin-top: 77px;
 }
