--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -11,6 +11,7 @@
 @import "basics/typography.scss";
 @import "basics/icons.scss";
 @import "basics/layout.scss";
+@import "basics/animations.scss";
 
 // Components
 @import "components/nav-bar.scss";
