--- a/frontend/src/assets/sass/setup/_variables.scss
+++ b/frontend/src/assets/sass/setup/_variables.scss
@@ -1,11 +1,10 @@
 // Colors
 $clr1: #ED2A2A;
-$clr2: #4f3a65;
+$clr2: #8b7ca5;
 $clr3: #574f7d;
 $clr4: #95adbe;
 $clr5: #dff0ea;
 $clr6: #fff;
-
 // Breakpoints
 $mobile-breakpoint: 460px;
 $narrow-breakpoint: 720px;
