--- a/frontend/src/assets/sass/basics/_icons.scss
+++ b/frontend/src/assets/sass/basics/_icons.scss
@@ -14,3 +14,19 @@
     font-family: iconmoon;
     content: "\ea0f";
   }
+  .icon-dots-three-horizontal:before {
+    font-family: iconmoon;
+    content: "\e900";
+  }
+  .icon-window:before {
+    font-family: iconmoon;
+    content: "\e901";
+  }
+  .icon-paragraph-left:before {
+    font-family: iconmoon;
+    content: "\ea77";
+  }
+  .icon-message:before {
+    font-family: iconmoon;
+    content: "\e903";
+  }
