--- a/frontend/src/assets/fonts/icomoon/icomoon/style.css
+++ b/frontend/src/assets/fonts/icomoon/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?p2rcns');
-  src:  url('fonts/icomoon.eot?p2rcns#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?p2rcns') format('truetype'),
-    url('fonts/icomoon.woff?p2rcns') format('woff'),
-    url('fonts/icomoon.svg?p2rcns#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?i1iwu0');
+  src:  url('fonts/icomoon.eot?i1iwu0#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?i1iwu0') format('truetype'),
+    url('fonts/icomoon.woff?i1iwu0') format('woff'),
+    url('fonts/icomoon.svg?i1iwu0#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,27 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-message:before {
-  content: "\e903";
-}
-.icon-list-alt:before {
-  content: "\e902";
-}
-.icon-window:before {
-  content: "\e901";
-}
-.icon-list:before {
-  content: "\e9ba";
+.icon-dots-three-horizontal:before {
+  content: "\e900";
 }
 .icon-plus:before {
   content: "\ea0a";
 }
 .icon-cross:before {
   content: "\ea0f";
-}
-.icon-paragraph-left:before {
-  content: "\ea77";
-}
-.icon-dots-three-horizontal:before {
-  content: "\e900";
 }
