--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -31,5 +31,6 @@
 
 // // Pages
 @import "views/home-page.scss";
-@import "views/TrelloPage";
+@import "views/TopicPage";
 @import "views/authPage";
+@import "views/taskDetails";
