almost done head page

--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -19,6 +19,7 @@
 @import "components/main-header.scss";
 @import "components/menu.scss";
 @import "components/bg-gallery.scss";
+@import "components/footer.scss";
 
 // topic
 @import "components/topic/topicList";
