--- a/frontend/src/assets/sass/components/task/_addTask.scss
+++ b/frontend/src/assets/sass/components/task/_addTask.scss
@@ -40,7 +40,7 @@
             font-size: 14px;
             color: #41516e;
             font-family: montserrat, sans-serif;
-            padding: 4px 0 0 5px;
+            padding: 5px;
         }
 
         button{
