--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -30,6 +30,10 @@
 @import "components/task/taskPreview";
 @import "components/task/addTask";
 
+// task modal 
+@import "components/taskModal/modal-header";
+@import "components/taskModal/modal-body";
+
 // // Pages
 @import "views/home-page.scss";
 @import "views/TopicPage";
