--- a/frontend/src/assets/sass/views/_taskDetails.scss
+++ b/frontend/src/assets/sass/views/_taskDetails.scss
@@ -35,68 +35,16 @@
       cursor: pointer;
     }
 
-    .icon-paragraph-left {
-      position: absolute;
-      left: 13px;
-      top: 106px;
-      font-size: 15px;
-      color: #42526e;
-    }
-
-    .icon-message {
-        position: absolute;
-        left: 12px;
-        top: 194px;
-        font-size: 19px;
-        color: #42526e;
-    }
-
     .modal-txt{
         color: #41516e;
         font-weight: bold;
         font-family: montserrat, sans-serif;
-        border-radius: 3px;
+        cursor: text;
 
         &:focus {
             background: #fff;
             box-shadow: inset 0 0 0 2px #0079bf;
           }
-    }
-
-    .modal-header {
-      margin-bottom: 30px;
-      min-height: 32px;
-
-      .title {
-        font-size: 21px;
-        padding-left: 10px;
-      }
-
-      small {
-        color: #616c80c2;
-        font-size: 12px;
-        padding-left: 10px;
-
-        .bottom-line{
-            text-decoration-line: underline;
-        }
-      }
-    }
-
-    .modal-body {
-      .sub-title {
-        font-size: 17px;
-        color: #41516e;
-        font-weight: bold;
-        padding-left: 10px;
-        margin-bottom: 5px;
-      }
-      .description{
-        font-weight: initial;
-        padding: 2px 0 2px 10px;
-        font-size: 15px;
-        margin-bottom: 30px;
-      }
     }
   }
 }
