--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -24,6 +24,7 @@
 // topic
 @import "components/topic/topicList";
 @import "components/topic/topicPreview";
+@import "components/topic/addTopic";
 
 // task
 @import "components/task/taskList";
