--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -23,16 +23,17 @@
 @import "components/footer.scss";
 
 // topic
-@import "components/topic/topicList";
-@import "components/topic/topicPreview";
+@import "components/topic/topicList.scss";
+@import "components/topic/topicPreview.scss";
 
 // task
-@import "components/task/taskList";
-@import "components/task/taskPreview";
-@import "components/task/addTask";
+@import "components/task/taskList.scss";
+@import "components/task/taskPreview.scss";
+@import "components/task/addTask.scss";
 
 // // Pages
 @import "views/home-page.scss";
-@import "views/TopicPage";
-@import "views/authPage";
-@import "views/taskDetails";
+@import "views/TopicPage.scss";
+@import "views/authPage.scss";
+@import "views/taskDetails.scss";
+@import "views/aboutPage.scss";
