--- a/frontend/src/assets/sass/components/taskModal/_modal-body.scss
+++ b/frontend/src/assets/sass/components/taskModal/_modal-body.scss
@@ -25,7 +25,7 @@
   }
   .description {
     font-weight: initial;
-    padding: 2px 0 2px 10px;
+    padding: 2px 10px 2px 10px;
     font-size: 15px;
     margin-bottom: 30px;
   }
