--- a/frontend/src/assets/sass/components/taskModal/_modal-header.scss
+++ b/frontend/src/assets/sass/components/taskModal/_modal-header.scss
@@ -1,10 +1,10 @@
 .modal-header {
-    margin-bottom: 30px;
+    margin: 0 30px 30px 0;
     min-height: 32px;
 
     .title {
       font-size: 21px;
-      padding-left: 10px;
+      padding: 0 10px;
     }
 
     small {
