--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -34,6 +34,8 @@
 // task modal 
 @import "components/taskModal/modal-header";
 @import "components/taskModal/modal-body";
+@import "components/taskModal/modal-main";
+@import "components/taskModal/modal-sidebar";
 
 // // Pages
 @import "views/home-page.scss";
