--- a/frontend/src/assets/sass/components/topic/_addTopic.scss
+++ b/frontend/src/assets/sass/components/topic/_addTopic.scss
@@ -1,7 +1,7 @@
 .add-topic {
     float: right;
     margin-left: 4px;
-    width: 272px;
+    min-width: 272px;
     background-color: #ebecf0b3;
     border-radius: 4px;
     height: auto;
