--- a/frontend/src/assets/sass/components/_header.scss
+++ b/frontend/src/assets/sass/components/_header.scss
@@ -1,8 +1,8 @@
 header{
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     position: fixed;
-    height: 70px;
+    height: 46px;
     font-family: Yanone-Regular;
     width: 100%;
     transition: linear 0.6s;
@@ -13,10 +13,10 @@ header{
         background-color: #fff;
     }
     .main-logo {
-        margin-left: 13px;
+        margin: 3px 0 0 13px;
 
         img {
-            width: 105px;
+            width: 85px;
         }
     }
 }
