--- a/frontend/src/assets/sass/components/topic/_topicPreview.scss
+++ b/frontend/src/assets/sass/components/topic/_topicPreview.scss
@@ -2,7 +2,7 @@
   background-color: #ebecf0;
   border-radius: 3px;
   max-height: 100%;
-  width: 272px;
+  min-width: 272px;
   margin: 0 4px;
   position: relative;
 
