--- a/frontend/src/assets/sass/components/_footer.scss
+++ b/frontend/src/assets/sass/components/_footer.scss
@@ -26,6 +26,7 @@
     url("../../images/footer.jpg") fixed center no-repeat;
   background-size: cover;
   width: 100%;
+  padding: 50px;
 }
 
 .footer-section img {
