--- a/frontend/src/assets/sass/views/_home-page.scss
+++ b/frontend/src/assets/sass/views/_home-page.scss
@@ -92,6 +92,7 @@
   opacity: 0.8;
   background: url("../../images/section.jpg") fixed center;
   background-size: cover;
+  padding: 30px;
 }
 
 .home-section-desc {
