--- a/frontend/src/assets/sass/components/topic/_topicPreview.scss
+++ b/frontend/src/assets/sass/components/topic/_topicPreview.scss
@@ -7,22 +7,30 @@
   position: relative;
 
   .topic-header {
-    height: 42px;
     font-weight: 600;
     color: #41516e;
     font-size: 14px;
+    padding: 8px 3px 8px 9px;
 
     .topic-title {
-      padding: 10px 0 0 7px;
+      width: 232px;
+      border-radius: 4px;
+      min-height: 14px;
+      padding: 5px 6px;
+
+      &:focus {
+        background: #fff;
+        box-shadow: inset 0 0 0 2px #0079bf;
+        outline: none;
+      }
     }
 
     .dots-icon-container {
       width: 32px;
       height: 32px;
-      padding: 4px;
+      padding: 3px;
       text-align: center;
       border-radius: 4px;
-      margin: 5px 3px 0 0;
       cursor: pointer;
 
       &:hover {
