--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -36,6 +36,7 @@
 @import "components/taskModal/modal-header.scss";
 @import "components/taskModal/modal-body.scss";
 @import "components/taskModal/modal-main.scss";
+@import "components/taskModal/modalComments.scss";
 @import "components/taskModal/modal-sidebar.scss";
 
 // // Pages
