--- a/frontend/src/assets/sass/components/taskModal/_modal-main.scss
+++ b/frontend/src/assets/sass/components/taskModal/_modal-main.scss
@@ -1,3 +1,18 @@
 .modal-main-container {
-    width: 70%;
+  width: 70%;
+
+  .comment-box {
+    position: relative;
+    padding: 3px 11px;
+    background-color: #fff;
+    width: 445px;
+    border-radius: 4px;
+    box-shadow: 0 1px 2px -1px rgba(9, 30, 66, 0.25), 0 0 0 1px rgba(9, 30, 66, 0.08);
+
+    .add-comment-title {
+        color: #41516e;
+        font-family: montserrat, sans-serif;
+        cursor: pointer;
+    }
+  }
 }
