--- a/frontend/src/assets/sass/basics/_icons.scss
+++ b/frontend/src/assets/sass/basics/_icons.scss
@@ -30,3 +30,31 @@
     font-family: iconmoon;
     content: "\e903";
   }
+  .icon-clone:before {
+    font-family: iconmoon;
+    content: "\e908";
+  }
+  .icon-trash:before {    
+    font-family: iconmoon;
+    content: "\e906";
+  }
+  .icon-people_alt:before {
+    font-family: iconmoon;
+    content: "\e905";
+  }
+  .icon-label:before {
+    font-family: iconmoon;
+    content: "\e904";
+  }
+  .icon-input-checked:before {
+    font-family: iconmoon;
+    content: "\e907";
+  }
+  .icon-clock:before {
+    font-family: iconmoon;
+    content: "\e94e";
+  }
+  .icon-image:before {
+    font-family: iconmoon;
+    content: "\e90d";
+  }
