--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -41,7 +41,9 @@
 
 // Modal Side Bar //
 @import "components/modalSideBar/tool-bar.scss";
+@import "components/modalSideBar/action-bar.scss";
 @import "components/modalSideBar/labels/label-modal.scss";
+
 
 // // Pages
 @import "views/home-page.scss";
