--- a/frontend/src/assets/sass/views/_taskDetails.scss
+++ b/frontend/src/assets/sass/views/_taskDetails.scss
@@ -16,7 +16,7 @@
     border-radius: 4px;
     cursor: default;
     position: relative;
-    padding: 15px 40px;
+    padding: 15px 0px 15px 40px;
 
     .icon-window {
       position: absolute;
