--- a/frontend/src/assets/sass/components/modalSideBar/_members.scss
+++ b/frontend/src/assets/sass/components/modalSideBar/_members.scss
@@ -74,6 +74,8 @@
   color: #172b4d;
   text-align: center;
   &:hover {
-    background-color: #c1c7d0;
+    background-color: #a9abaf;
+    opacity: 0.8;
+    
   }
 }
