--- a/frontend/src/assets/sass/components/_menu.scss
+++ b/frontend/src/assets/sass/components/_menu.scss
@@ -1,10 +1,10 @@
 .menu {
   z-index: 999;
-  margin-top: 70px;
+  margin-top: 64px;
   top: 0;
   right: 0;
   position: fixed;
-  width: 400px;
+  width: 336px;
   height: 100vh;
   background: #f4f5f7;
   box-sizing: border-box;
@@ -21,9 +21,11 @@
 }
 
 .exit-menu {
-  float: right;
   cursor: pointer;
   color: black;
+  right: 6px;
+  top: 4px;
+  position: absolute;
 }
 
 .menu-options {
@@ -35,6 +37,7 @@
   transition: 0.2 ease all;
   cursor: pointer;
   padding: 2px;
+  height: 7rem;
   width: 50%;
 
   &:hover {
@@ -56,11 +59,31 @@
   position: absolute;
   margin-top: -60px;
   cursor: pointer;
+  left: 5px;
+  top: 1px;
 }
 
-.menu-button {
-  position: absolute;
-  right: 0;
-  top: 0;
-  margin-top: 77px;
+.menu-side-header {
+  font-size: 1.1rem;
+  font-family: cursive;
+  text-align: center;
+  border-bottom: 1px solid rgba(9, 30, 66, 0.13);
+  padding: 5px;
+  width: 96%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.activity-section {
+  margin-top: 16px;
+  width: 96%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  border-top: 1px solid rgba(9, 30, 66, 0.13);
+  padding-top: 10px;
+  font-size: 1.1rem;
+  font-family: cursive;
+  border-bottom: 1px solid rgba(9, 30, 66, 0.13);
+  padding-bottom: 10px;
 }
