--- a/frontend/src/assets/sass/basics/_icons.scss
+++ b/frontend/src/assets/sass/basics/_icons.scss
@@ -58,3 +58,11 @@
     font-family: iconmoon;
     content: "\e90d";
   }
+  .icon-color_lens:before {
+    font-family: iconmoon;
+    content: "\e909";
+  }
+  .icon-arrow-left2:before {
+    font-family: iconmoon;
+    content: "\ea40";
+  }
