--- a/frontend/src/assets/sass/components/taskModal/_modal-header.scss
+++ b/frontend/src/assets/sass/components/taskModal/_modal-header.scss
@@ -1,10 +1,11 @@
 .modal-header {
-    margin: 0 30px 10px 0;
+    margin: 0px 265px 10px 0;
     min-height: 32px;
 
     .title {
       font-size: 21px;
       padding: 0 10px;
+      border-radius: 4px;
     }
 
     small {
