--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -44,7 +44,6 @@
 @import "components/modalSideBar/action-bar.scss";
 @import "components/modalSideBar/labels/label-modal.scss";
 
-
 // // Pages
 @import "views/home-page.scss";
 @import "views/TopicPage.scss";
@@ -55,3 +54,6 @@
 // Modal Side Bar //
 @import "components/modalSideBar/tool-bar.scss";
 @import "components/modalSideBar/members.scss";
+
+// Due Time //
+@import "components/dueTime/due-time.scss";
