--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -22,6 +22,9 @@
 @import "components/bg-gallery.scss";
 @import "components/footer.scss";
 
+// board header
+@import "components/boardHeader/board-header";
+
 // topic
 @import "components/topic/topicList";
 @import "components/topic/topicPreview";
