--- a/frontend/src/assets/sass/components/_header.scss
+++ b/frontend/src/assets/sass/components/_header.scss
@@ -2,21 +2,22 @@ header{
     top: 0;
     left: 0;
     position: fixed;
-    height: 46px;
+    height: 32px;
     font-family: Yanone-Regular;
     width: 100%;
     transition: linear 0.6s;
     z-index: 999;
-   
+    background: rgba(255, 255, 255, 0.30);
 
     &.colorful {
         background-color: #fff;
     }
     .main-logo {
-        margin: 3px 0 0 13px;
-
         img {
-            width: 85px;
+            width: 80px;
+            position: absolute;
+            top: -2px;
+            left: 7px;
         }
     }
 }
