--- a/frontend/src/assets/sass/components/boardHeader/_board-header.scss
+++ b/frontend/src/assets/sass/components/boardHeader/_board-header.scss
@@ -1,4 +1,10 @@
 .board-header {
-    padding: 8px 4px 4px 8px;
+    padding: 4px 4px 4px 6px;
     background-color: rgba(255, 255, 255, 0.6);
+
+    .board-header-divider {
+        border-left: 1px solid rgba(0, 0, 0, 0.08);
+        height: 16px;
+        margin: 8px 6px 12px 6px;
+    }
 }
