--- a/frontend/src/assets/sass/components/task/_taskPreview.scss
+++ b/frontend/src/assets/sass/components/task/_taskPreview.scss
@@ -35,3 +35,8 @@
     background-color: #e1e2e6;
   }
 }
+.drag-task{
+  margin: 8px auto;
+  //transition: linear all 0.2s;
+  //transform: rotate(45deg);
+}
