--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -51,6 +51,7 @@
 @import "views/authPage.scss";
 @import "views/taskDetails.scss";
 @import "views/aboutPage.scss";
+@import "views/boardPage.scss";
 
 // Modal Side Bar //
 @import "components/modalSideBar/tool-bar.scss";
